<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <!-- Title -->
    <TextView
        android:id="@+id/createAccountTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="monospace"
        android:text="@string/create_account_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Enter user email address -->
    <EditText
        android:id="@+id/newEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/new_email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/newPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTitle" />

    <!-- Enter user password -->
    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/createNewAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEmailEditText" />

    <!-- CREATE NEW ACCOUNT Button -->
    <Button
        android:id="@+id/createNewAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="187dp"
        android:text="@string/create_new_account_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText" />

    <!-- CANCEL Button -->
    <Button
        android:id="@+id/cancelCreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="98dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNewAccountButton" />

</androidx.constraintlayout.widget.ConstraintLayout>